syntax = "proto3";
option go_package = "github.com/IsmaelNicolas/Library_System/book";

package inventory;

import "author.proto";

service BookService {
    rpc CreateBook(CreateBookRequest) returns (BookResponse);
    rpc ReadBooks(ReadBooksRequest) returns (ReadBooksResponse);
    rpc ReadBookById(ReadBookByIdRequest) returns (BookResponse);
    rpc UpdateBookById(UpdateBookByIdRequest) returns (BookResponse);
}

message Book {
    uint64 id = 1;
    string title = 2;
    int32 year = 3;
    inventory.Author author = 4;
}

message CreateBookRequest {
    string title = 1;
    int32 year = 2;
    inventory.Author author = 3;
}

message ReadBooksRequest {}

message ReadBooksResponse {
    repeated Book books = 1;
}

message ReadBookByIdRequest {
    uint64 id = 1;
}

message UpdateBookByIdRequest {
    uint64 id = 1;
    string title = 2;
    int32 year = 3;
    inventory.Author author = 4;
}

message BookResponse {
    Book book = 1;
}
